# critical-thinking-series

./: CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml  update-catalog.yml
docs/: about.md  index.md
docs/topics/: 01-elaboration-likelihood-model.md  01-introduction-to-critical-thinking.md  02-cognitive-biases.md  03-logical-fallacies.md  index.md
scripts/: update_catalog.py
topics/01-elaboration-likelihood-model/: README.md  pyproject.toml  references.md  topic.yaml
topics/01-elaboration-likelihood-model/demo/: elm-analysis-exercise.md
topics/01-introduction-to-critical-thinking/: README.md  references.md  topic.yaml
topics/01-introduction-to-critical-thinking/demo/: assumptions-exercise.md
topics/02-cognitive-biases/: README.md  references.md  topic.yaml
topics/02-cognitive-biases/demo/: bias-detection-game.md
topics/03-logical-fallacies/: README.md  references.md  topic.yaml
topics/03-logical-fallacies/demo/: fallacy-identification.md
